cambios en conexion a servidor

--- a/Sistema de planos/appsettings.json
+++ b/Sistema de planos/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SI-DESARROLLO45\\SQLEXPRESS; Database=PlanosDB; IntegratedSecurity=true; MultipleActiveResultSet=true;"
+    "DefaultConnection": "Server=SI-DESARROLLO05\\SQLEXPRESS; Database=plaons-db; IntegratedSecurity=true; MultipleActiveResultSet=true;"
   }
   
 }
