correccion en conexion de rama master

--- a/Sistema de planos/appsettings.json
+++ b/Sistema de planos/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=SI-DESARROLLO45\\SQLEXPRESS; Database=PlanosDB; IntegratedSecurity=true; MultipleActiveResultSet=true;"
+      //conexion corregida para rama master
   }
   
 }
