--- a/Sistema de planos/appsettings.json
+++ b/Sistema de planos/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SI-SOPORTE22\\SQLEXPRESS; Database=PlanosDB; IntegratedSecurity=true; MultipleActiveResultSet=true;"
+    "DefaultConnection": "Server=SI-SOPORTE22\\SQLEXPRESS; Database=Planos; IntegratedSecurity=true; MultipleActiveResultSets=true;"
   }
   
 }
