Hasta acá funciona

--- a/Sistema de planos/appsettings.json
+++ b/Sistema de planos/appsettings.json
@@ -5,9 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "IdentityServer": {
+    "Clients": {
+      "Planos": {
+        "Profile": "IdentityServerSPA"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=SI-SOPORTE22\\SQLEXPRESS; Database=Planos; IntegratedSecurity=true; MultipleActiveResultSets=true;"
   }
-  
+
 }
