--- a/Sistema de planos/appsettings.Development.json
+++ b/Sistema de planos/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    }
   }
 }
