mi conexion a bd configurada

--- a/Sistema de planos/appsettings.json
+++ b/Sistema de planos/appsettings.json
@@ -16,7 +16,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SI-SOPORTE22\\SQLEXPRESS; Database=Planos; IntegratedSecurity=true; MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=SI-DESARROLLO05\\SQLEXPRESS; Database=Planos; IntegratedSecurity=true; MultipleActiveResultSets=true;"
   }
 
 }
