--- a/Sistema de planos/appsettings.json
+++ b/Sistema de planos/appsettings.json
@@ -16,7 +16,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SI-SOPORTE22\\SQLEXPRESS; Database=Planos; IntegratedSecurity=true; MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=www;Database=planos;User Id=aleidi;Password=aleidi;MultipleActiveResultSets=true"
   }
 
 }
