cambios en back, en local anda, en desarrollo no

--- a/Sistema de planos/appsettings.json
+++ b/Sistema de planos/appsettings.json
@@ -16,7 +16,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=www;Database=planos;User Id=aleidi;Password=aleidi;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=SI-DESARROLLO05\\SQLEXPRESS; Database=Planos; IntegratedSecurity=true; MultipleActiveResultSets=true;"
+    //"DefaultConnection": "Server=www;Database=planos;User Id=aleidi;Password=aleidi;MultipleActiveResultSets=true"
   }
 
 }
